--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ nav a {
   padding:10;
   background: #ccc;
 }
+figcaption {text-align: center;} 
+
+#featured-property p {    
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;     
+}
+
 
 nav {text-align:center;} 
 footer {
